--- a/4/4.md
+++ b/4/4.md
@@ -12,28 +12,28 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>[Logueo y seguridad](4.1/4.1.md)</td>
+            <td><a href="4.1/4.1.md">Logueo y seguridad</td>
             <td>1</td>
             <td>Nombre del requerimiento</td>
             <td>R001</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>[Usuario](4.2/4.2.md)</td>
+            <td><a href="4.2/4.2.md">Usuario</td>
             <td>2</td>
             <td>Nombre del requerimiento</td>
             <td>R002</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>[Arrendamientos](4.3/4.3.md)</td>
+            <td><a href="4.3/4.3.md">Arrendamiento</td>
             <td>3</td>
             <td>Nombre del requerimiento</td>
             <td>R003</td>
         </tr>
         <tr>
             <td rowspan="4">4</td>
-            <td rowspan="4">[Inquilinos](4.4/4.4.md)</td>
+            <td rowspan="4"><a href="4.4/4.4.md">Inquilino</td>
             <td>1</td>
             <td>Crear un nuevo Inquilino</td>
             <td>R001</td>
@@ -55,28 +55,28 @@
         </tr>        
         <tr>
             <td>5</td>
-            <td>[Facturación y pagos](4.5/4.5.md)</td>
+            <td><a href="4.5/4.5.md">Facturación y Pagos</td>
             <td>5</td>
             <td>Nombre del requerimiento</td>
             <td>R005</td>
         </tr>
         <tr>
             <td>6</td>
-            <td>[Recobro](4.6/4.6.md)</td>
+            <td><a href="4.6/4.6.md">Recobro</td>
             <td>6</td>
             <td>Nombre del requerimiento</td>
             <td>R006</td>
         </tr>
         <tr>
             <td>7</td>
-            <td>[Eventos](4.7/4.7.md)</td>
+            <td><a href="4.7/4.7.md">Eventos</td>
             <td>7</td>
             <td>Nombre del requerimiento</td>
             <td>R007</td>
         </tr>
         <tr>
             <td>8</td>
-            <td>[Mantenimiento y Servicio](4.8/4.8.md)</td>
+            <td><a href="4.8/4.8.md">Mantenimiento y Servicio</td>
             <td>8</td>
             <td>Nombre del requerimiento</td>
             <td>R008</td>
