--- a/4/4.md
+++ b/4/4.md
@@ -90,4 +90,4 @@
 ![Prototipo Imagen](Prototipo_muestra.png)
 
 ## Enlace de Figma
-[Grupo 5 Prototipo](https://www.figma.com/design/VWVEbq72V7HGyZJb9HV39f/DBD_Grupo_5?node-id=71-35&node-type=frame&t=RMNqg1MfI5jyNTJV-0)
+LINK DEL FIGMA: [Grupo 5 Prototipo](https://www.figma.com/design/VWVEbq72V7HGyZJb9HV39f/DBD_Grupo_5?node-id=71-35&node-type=frame&t=RMNqg1MfI5jyNTJV-0)
