--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -14,9 +14,14 @@
 
 ## 3 Módulo de Arrendamientos
 ### Responsabilidades
-- 
+- Mantenimiento de un registro detallado de todos los contratos de arrendamiento.
+- Gestión del ciclo de vida de los contratos (creación, modificación, etc).
+- Gestión óptima de espacios comerciales.
 ### Interacción con otros módulos
-- 
+- Con el módulo de inquilinos para el intercambio de información sobre los arrendatarios.
+Envío de notificaciones a los inquilinos sobre vencimientos, renovaciones y otros eventos relacionados con el contrato.
+- Módulo de facturación y pagos para la generación de facturas por concepto de alquiler, registro de pagos realizados por los inquilinos y 
+envío de recordatorios de pago.
 
 ## 4. Módulo de Inquilinos
 ### Responsabilidades
