--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -2,54 +2,54 @@
 
 Recobro: Solicitud especifica sobre un servicio extra que la empresa realice para el inquilino
 
-    Nombre_recobro: El nombre del recobro que se va a realizar
+    Nombre_recobro: El nombre del recobro que se va a realizar. Tipo de dato: Caracter
     
-    Descripcion_recobro: Detalles del recobro a realizar
+    Descripcion_recobro: Detalles del recobro a realizar. Tipo de dato: Caracter
     
-    ID_recobro: Codigo para identificar el recobro
+    ID_recobro: Codigo para identificar el recobro. Tipo de dato: Caracter
     
-    ID_inquilino: Codigo para identificar al inquilino
+    ID_inquilino: Codigo para identificar al inquilino. Tipo de dato: Caracter
     
-    Razon_recobro: Motivo por el cual se realiza el recobro
+    Razon_recobro: Motivo por el cual se realiza el recobro. Tipo de dato: Caracter
     
-    Categoria_recobro: Clasificacion en la cual entra el recobro
+    Categoria_recobro: Clasificacion en la cual entra el recobro. Tipo de dato: Caracter
     
-    Estado_recobro: Estado en la que se encuentra el recobro
+    Estado_recobro: Estado en la que se encuentra el recobro. Tipo de dato: Caracter
   
 Proyecto_recobro: Planificacion sobre la ejecucion de un recobro
 
-    ID_proyecto: Codigo para identifcar el proyecto
+    ID_proyecto: Codigo para identifcar el proyecto. Tipo de dato: Caracter
     
-    Periodos: Tiempos de plazos para realizar las tareas encargadas para completar el proyecto
+    Periodos: Tiempos de plazos para realizar las tareas encargadas para completar el proyecto. Tipo de dato: Fecha
     
-    Tareas: Deberes a realizar necesarios para el proyecto
+    Tareas: Deberes a realizar necesarios para el proyecto. Tipo de dato: Caracter
     
-    Cronograma: Ordenamiento sobre el tiempo de los periodos y las tareas del proyecto
+    Cronograma: Ordenamiento sobre el tiempo de los periodos y las tareas del proyecto. Tipo de dato: Caracter
     
-    Costos: Costos asociados sobre la ejecucion del proyecto
+    Costos: Costos asociados sobre la ejecucion del proyecto. Tipo de dato: Float
     
-    Estado_proyecto: Estado en el que se encuentra el proyecto
+    Estado_proyecto: Estado en el que se encuentra el proyecto. Tipo de dato: Caracter
   
 Acuerdo_recobro: Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa para definir como proceder para realizar el recobro
 
-    ID_acuerdo: Codigo para identificar el acuerdo del recobro
+    ID_acuerdo: Codigo para identificar el acuerdo del recobro. Tipo de dato: Caracter
     
-    Fecha_acuerdo: Fecha en la que se realiza el acuerdo
+    Fecha_acuerdo: Fecha en la que se realiza el acuerdo. Tipo de dato: fecha
     
-    ID_inquilino: Codigo para identificar al inquilino
+    ID_inquilino: Codigo para identificar al inquilino. Tipo de dato: Caracter
     
-    Precio_acuerdo: Cantidad de dinero a cobrar por la ejecucion del proyecto
+    Precio_acuerdo: Cantidad de dinero a cobrar por la ejecucion del proyecto. Tipo de dato: fecha
     
-    Descripcion_acuerdo: Detalles sobre el acuerdo
+    Descripcion_acuerdo: Detalles sobre el acuerdo. Tipo de dato: Caracter
   
 Factura: Documento que refleja la operacion realizada por el cobro del servicio extra
 
-    ID_factura: Codigo para identificar la factura
+    ID_factura: Codigo para identificar la factura. Tipo de dato: Caracter
     
-    ID_inquilino: Codigo para identificar al inquilino
+    ID_inquilino: Codigo para identificar al inquilino. Tipo de dato: Caracter
     
-    Concepto_factura: Concepto por el cual se realiza la factura
+    Concepto_factura: Concepto por el cual se realiza la factura. Tipo de dato: Caracter
     
-    Fecha_factura: Fecha en la cual se realiza la facturacion
+    Fecha_factura: Fecha en la cual se realiza la facturacion. Tipo de dato: fecha
     
-    Precio_factura: Cantidad monetaria por el cual se realiza el cobro del recobro
+    Precio_factura: Cantidad monetaria por el cual se realiza el cobro del recobro. Tipo de dato: float
