--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -50,7 +50,7 @@ Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios 
 
   Detalles del estado:
   
-    Enviado: Se realizo el envio de la solicitud para el servicio
+    Enviado: Se realizo el envio de la solicitud para el servicio y se esta realizando la planificacion para la ejecucion
   
     Valorizando: La solicitud ha sido preaprobada y esta en espera para realizar la negociacion
     Rechazado: La solicitud ha sido rechazada
