--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -22,7 +22,7 @@ Proyecto_recobro: Planificacion sobre la ejecucion de un recobro
     
     Periodos: Tiempos de plazos para realizar las tareas encargadas para completar el proyecto. Tipo de dato: Fecha
     
-    Tareas: Deberes a realizar necesarios para el proyecto. Tipo de dato: Caracter
+    Actividades: Deberes a realizar necesarios para el proyecto. Tipo de dato: Caracter
     
     Cronograma: Ordenamiento sobre el tiempo de los periodos y las tareas del proyecto. Tipo de dato: Caracter
     
