--- a/4/4.6/4.6.md
+++ b/4/4.6/4.6.md
@@ -1,3 +1,89 @@
 # 4.6. Módulo 6
 
-# Módulos de Recobros
+### Módulo de Recobros
+
+| Requerimiento | Nombre |
+|---|---|
+| R001 | Visualizacion de recobros|
+| R002 | Envío de solicitud de recobros | 
+| R003 | Planificacion del proyecto de recobro |
+| R005 | Supervision del proyecto |
+| R004 | Registrar pago del recobro |
+
+
+---
+
+---
+
+## **Caso de Uso #1: Visualizacion de recobros**
+
+| Código | R001 |
+|---|---|
+| **Objetivo** | Permitir al inquilino revisar los detalles sobre los recobros realizados anteriormente. |
+| **Descripción** | El inquilino puede verificar la informacion de los recobros. |
+| **Actor** | Inquilino, Sistema |
+| **Flujo de eventos** |
+| 1 | El inquilino accede al módulo de facturación y selecciona la opción "Recobros". |
+| 2 | El inquilino revisa la lista general  de los recobros en su "Historial de recobros". |
+| 3 | El inquilino selecciona la opcion de "mas detalles" en la opcion del recobro de su preferencia. |
+| 4 | El sistema muestra los detalles correspondientes al recobro seleccionado. 
+| 5 | Fin del caso de uso. |
+
+## **Caso de Uso #2: Envío de solicitud de recobros**
+
+| Código | R002 |
+|---|---|
+| **Objetivo** | Enviar solicitudes para el servicio de recobro que el inquilino requiera y que la empresa tenga la posibilidad de realizar. |
+| **Descripción** | El inquilino envia la solicitud en conjunto con sus detalles para que la empresa evaluar la viabilidad de realizar el servicio. |
+| **Actor** | Inquilino, Sistema |
+| **Flujo de eventos** |
+| 1 | El inquilino revisa los recobros que puede realizar mediante el sistema de envios. |
+| 2 | El inquilino completa los formularios de la solicitud de nuevos recobros. |
+| 3 | El sistema registra el envío de la solicitud del recobro y notifica a los administradores. |
+| 4 | El Administrador revisa la solicitud del recobro y procede con la planificacion del proyecto|
+| 5 | Fin del caso de uso. |
+
+## **Caso de Uso #3: Planificacion del proyecto de recobro**
+
+| Código | R003 |
+|---|---|
+| **Objetivo** | generar un cronograma para una ejecucion ordenada del servicio de recobro. |
+| **Descripción** | El administrador puede generar un cronograma ordenado  en el tiempo para las actividades necesarias para el proyecto, incluyendo el costo de cada actidicadad. |
+| **Actor** | Administrador, Sistema |
+| **Flujo de eventos** |
+| 1 | El administrador añade las actividades a realizar en conjunto con el tiempo que duraran y el costo por cada actividad. |
+| 2 | El administrador conecta las actividades en una secuencia dentro de un tiempo ordenado. |
+| 3 | El sistema calcula el tiempo y costo del proyecto. |
+| 4 | El administrador acepta o rechaza el proyecto del recobro dependiendo de la viabilidad que el sistema ha calculado. |
+| 5 | Fin del caso de uso. |
+
+## **Caso de Uso #4: Supervision del proyecto**
+
+| Código | R004 |
+|---|---|
+| **Objetivo** | Supervisar el proyecto del recobro. |
+| **Descripción** | Se visualiza el estado de las actividades del proyecto. |
+| **Actor** | Administrador, Sistema |
+| **Flujo de eventos** |
+| 1 | El Administrador accede al modulo de recobros y selecciona un recobros en la lista general de recobros |
+| 2 | El Administrador selecciona la opcion de supervision dentro del modulo accedido. |
+| 3 | El Administrador evalua el estado actual de las actividades según el cronograma establecido en el acuerdo. |
+| 4 | El administrador ajusta el estado de las actividades según la situacion real de las actividades. |
+| 5 | El sistema habilita la opcion de realizar el pago por el recobro cuando todas las actividades estan completadas. |
+| 6 | Fin del caso de uso. |
+
+
+## **Caso de Uso #5: Registro de Pago del recobro**
+
+| Código | R005 |
+|---|---|
+| **Objetivo** | Registrar el pago por el recobro. |
+| **Descripción** | Permite al administrador o al sistema registrar los pagos por el recobro. |
+| **Actor** | Administrador, Sistema |
+| **Flujo de eventos** |
+| 1 | El Administrador accede al módulo de pagos y selecciona la opción "Registrar factura de recobro". |
+| 2 | El Administrador selecciona el recobro a pagar y el sistema solicita detalles del pago. |
+| 3 | El Administrador ingresa los detalles y envia la solicitud de pago al inquilino. |
+| 4 | El sistema actualiza el estado de la factura a "Pagado". |
+| 5 | El sistema envía una notificación al inquilino y genera el recibo. |
+| 6 | Fin del caso de uso. |
