--- a/4/4.6/4.6.md
+++ b/4/4.6/4.6.md
@@ -7,8 +7,7 @@
 | R001 | Visualizacion de recobros|
 | R002 | Envío de solicitud de recobros | 
 | R003 | Planificacion del proyecto de recobro |
-| R005 | Supervision del proyecto |
-| R004 | Registrar pago del recobro |
+| R004 | Supervision del proyecto |
 
 
 ---
@@ -69,21 +68,5 @@
 | 2 | El Administrador selecciona la opcion de supervision dentro del modulo accedido. |
 | 3 | El Administrador evalua el estado actual de las actividades según el cronograma establecido en el acuerdo. |
 | 4 | El administrador ajusta el estado de las actividades según la situacion real de las actividades. |
-| 5 | El sistema habilita la opcion de realizar el pago por el recobro cuando todas las actividades estan completadas. |
-| 6 | Fin del caso de uso. |
-
-
-## **Caso de Uso #5: Registro de Pago del recobro**
-
-| Código | R005 |
-|---|---|
-| **Objetivo** | Registrar el pago por el recobro. |
-| **Descripción** | Permite al administrador o al sistema registrar los pagos por el recobro. |
-| **Actor** | Administrador, Sistema |
-| **Flujo de eventos** |
-| 1 | El Administrador accede al módulo de pagos y selecciona la opción "Registrar factura de recobro". |
-| 2 | El Administrador selecciona el recobro a pagar y el sistema solicita detalles del pago. |
-| 3 | El Administrador ingresa los detalles y envia la solicitud de pago al inquilino. |
-| 4 | El sistema actualiza el estado de la factura a "Pagado". |
-| 5 | El sistema envía una notificación al inquilino y genera el recibo. |
+| 5 | El sistema habilita la opcion de registrar el pago por el recobro cuando todas las actividades estan completadas. |
 | 6 | Fin del caso de uso. |
