--- a/2/2.2/2.2.md
+++ b/2/2.2/2.2.md
@@ -7,8 +7,8 @@ El proceso del módulo inquilinos abarca desde el registro hasta la gestión de 
 
 | Secuencia | Proceso | Descripción | Responsable |
 |-----------|---------|-------------|-------------|
-| 1 | Enviar solicitud de arrendamiento | El inqiulino envía la solicitud de arrendamiento a través de un portal de línea | Inquilino |
-| 2 | Verificar automáticamente documentos | El sistema verifica uatomáticamente los documentos del inquilino (documentos requeridos, antecedentes, etc) | Sistema |
+| 1 | Enviar solicitud de arrendamiento | El inquilino envía la solicitud de arrendamiento a través de un portal de línea | Inquilino |
+| 2 | Verificar automáticamente documentos | El sistema verifica automáticamente los documentos del inquilino (documentos requeridos, antecedentes, etc) | Sistema |
 | 3 | Solicitar documentos | El sistema solicita al usuario del faltante de docuemntos que se necesitan | Sistema |
 | 4 | Enviar documentos solicitados | El usuario envía los documentos necesarios para seguir con el proceso de arrendamiento | Inquilino |
 | 5 | Generación de contrato | Proceso intermedio donde el administrador y el inquilino realizan el acuerdo para el contrato | Administrador |
