--- a/2/2.2/2.2.md
+++ b/2/2.2/2.2.md
@@ -15,7 +15,7 @@ El proceso del módulo inquilinos abarca desde el registro hasta la gestión de 
 | 6 | Aletar para renovaciones | El sistema genera automáticamente alertar cuando los contratos estén por expirar | Sistema |
 | 7 | Gestionar recobros | Proceso intermedio donde se gestioanr el recobros de servicios y pagos entre el inquilino y MallPlaza | Administrador |
 | 8 | Eliminar registro del inquilino | Si el inquilino decide no renovar, se elimina automáticamente el registro del inquilino, se puede dar solo si este no tiene deudas pendientes o si la normativa lo permite | Administrador |
-| 9 | Cambiar estado del contrato a "Expirado", manteniendo el registro para futuras referencias | Adminstrador |
+| 9 | Cambiar estado del contrato a "Expirado" | Se manteniene el registro para futuras referencias | Adminstrador |
 
 ## Proceso Mantenimiento 
 
