--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -1,4 +1,66 @@
 # 5.2. Diccionario de Datos
+Información de los atributos considerados en las diferentes entidades que abarcamos en nuestro modelo conceptual para nuestro Sistema de Gestión de Arrendamientos y Espacios en MallPlaza.
+
+## Entidad Persona
+La entidad Persona representa a los individuos que interactúan o tienen relación con el sistema. Almacena información básica de identificación personal, como nombre, apellidos, documento de identidad y datos de contacto (como teléfono y correo electrónico). Esta entidad es genérica y puede ser utilizada para representar tanto a clientes como a empleados.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| idPersona           | CHAR(10)       | x(10)               | No nulo, único        | N/A        | N/A             | Identificador único de la persona.                    |
+| Nombre              | CHAR(100)      | x(100)              | No nulo               | N/A        | N/A             | Nombre de la persona.                                 |
+| firstLastName       | CHAR(100)      | x(100)              | No nulo               | N/A        | N/A             | Primer apellido de la persona.                        |
+| secondLastName      | CHAR(100)      | x(100)              | Nulo permitido        | N/A        | N/A             | Segundo apellido de la persona.                       |
+| E-mail              | CHAR(256)      | x(256)              | Formato email válido  | N/A        | N/A             | Dirección de correo electrónico de la persona.        |
+| Teléfono            | CHAR(15)       | 999999999           | 9-15 dígitos, no nulo | N/A        | N/A             | Número de teléfono de la persona.                     |
+| Departamento        | CHAR(50)       | x(50)               | Nulo permitido        | N/A        | N/A             | Departamento donde reside la persona.                 |
+| Ciudad              | CHAR(50)       | x(50)               | Nulo permitido        | N/A        | N/A             | Ciudad donde reside la persona.                       |
+| Distrito            | CHAR(50)       | x(50)               | Nulo permitido        | N/A        | N/A             | Distrito donde reside la persona.                     |
+| nroDomicilio        | CHAR(10)       | 999999              | Nulo permitido        | N/A        | N/A             | Número de domicilio de la persona.                    |
+| nroDocumento        | CHAR(20)       | x(20)               | No nulo               | N/A        | N/A             | Número de documento de identidad.                     |
+| tipoDocumento       | CHAR(20)       | x(20)               | No nulo               | N/A        | N/A             | Tipo de documento de identidad.                       |
+| Edad                | INT            | 999                 | 0 - 120               | Años       | Fecha de Nacimiento | Edad de la persona.                               |
+
+## Entidad Inquilino
+La entidad Inquilino contiene la información específica de los arrendatarios que tienen un contrato con Mallplaza. Además de heredar atributos generales de la entidad Persona, esta entidad almacena datos adicionales relevantes para el proceso de arrendamiento.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| idInquilino         | CHAR(10)       | x(10)               | No nulo, único        | N/A        | N/A             | Identificador único del inquilino.                    |
+| estadoInquilino     | CHAR(20)       | x(20)               | Activo, Inactivo      | N/A        | N/A             | Estado del inquilino en el sistema.                   |
+| fechaRegistro       | DATE           | YYYY-MM-DD          | Fecha válida, no nulo | N/A        | N/A             | Fecha en que se registró al inquilino.                |
+| fechaEliminación    | DATE           | YYYY-MM-DD          | Fecha válida, nulo permitido | N/A  | N/A             | Fecha de eliminación del registro del inquilino.     |
+
+## Entidad Documento
+Entidad general que abarca tanto Contrato como Solicitud, se estructuró para que pueda manejar documentos relacionados con diferentes procesos en el sistema, como contratos, solicitudes, y otros documentos.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**      | **Unidad** | **Derivada de** | **Descripción (Corta)**                               |
+|---------------------|----------------|---------------------|--------------------------|------------|-----------------|-------------------------------------------------------|
+| idDocumento         | CHAR(10)       | x(10)               | No nulo, único            | N/A        | N/A             | Identificador único del documento.                    |
+| tipoDocumento       | CHAR(50)       | x(50)               | Contrato, Solicitud, Recibo, etc. | N/A  | N/A             | Tipo de documento asociado.                           |
+| rutaDocumento       | CHAR(256)      | x(256)              | No nulo                   | N/A        | N/A             | Ruta donde se almacena el archivo digital.            |
+| fechaSubido         | DATE           | YYYY-MM-DD          | Fecha válida, no nulo     | N/A        | N/A             | Fecha en que el documento fue subido al sistema.      |
+
+## Entidad Solicitud
+La entidad Solicitud representa las solicitudes formales realizadas por los usuarios que desean arrendar un espacio en uno de las sedes de MallPlaza
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| idSolicitud         | CHAR(10)       | x(10)               | No nulo, único        | N/A        | N/A             | Identificador único de la solicitud.                  |
+| estadoSolicitud     | CHAR(20)       | x(20)               | Abierta, Cerrada      | N/A        | N/A             | Estado actual de la solicitud.                        |
+| fechaSolicitud      | DATE           | YYYY-MM-DD          | Fecha válida, no nulo | N/A        | N/A             | Fecha en que se realizó la solicitud.                 |
+| fechaResolución     | DATE           | YYYY-MM-DD          | Fecha válida, nulo permitido | N/A  | N/A             | Fecha en que se resolvió la solicitud, si aplica.    |
+
+## Entidad Contrato
+Contiene información clave sobre el acuerdo de arrendamiento, con atributos para fechas, estado y monto. Se añadió también el campo "condición" para cualquier cláusula especial.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| idContrato          | CHAR(10)       | x(10)               | No nulo, único            | N/A        | N/A             | Identificador único del contrato.                     |
+| monto               | DECIMAL(10,2)  | 9999999.99          | No nulo                   | N/A        | N/A             | Monto acordado en el contrato.                        |
+| fechaInicio         | DATE           | YYYY-MM-DD          | Fecha válida, no nulo     | N/A        | N/A             | Fecha de inicio del contrato.                         |
+| fechaVencimiento    | DATE           | YYYY-MM-DD          | Fecha válida, no nulo     | N/A        | N/A             | Fecha de vencimiento del contrato.                    |
+| estado              | CHAR(20)       | x(20)               | Activo, Expirado, Renovado | N/A       | N/A             | Estado actual del contrato.                           |
+| condición           | CHAR(100)      | x(100)              | Nulo permitido            | N/A        | N/A             | Condiciones especiales asociadas al contrato.         |
 
 Recobro: Solicitud especifica sobre un servicio extra que la empresa realice para el inquilino
 
