--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -115,3 +115,62 @@ Factura: Documento que refleja la operacion realizada por el cobro del servicio 
     Fecha_factura: Fecha en la cual se realiza la facturacion. Tipo de dato: fecha
     
     Precio_factura: Cantidad monetaria por el cual se realiza el cobro del recobro. Tipo de dato: float
+
+## Entidad Mantenimiento 
+Representa la programación de mantenimientos, tanto preventivo como correctivo.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| idMantenimiento          | CHAR(10)       | x(10)               | No nulo, único            | N/A        | N/A             | Identificador único del mantenimiento                     |
+| prioridad              | CHAR(10)  | XX        | TAB1                   | N/A        | N/A             | Prioridad que tiene el mantenimiento                        |
+| plazo         | DATE           | YYYY-MM-DD          | Fecha válida, no nulo     | N/A        | N/A             | Fecha máxima que se tiene para realizar el mantenimiento                         |
+| Descripción             | CHAR       | x(64)               | No nulo | N/A       | N/A             | Detalles que tiene el mantenimiento                          |
+| empleado         | CHAR      | x(64)              | No nulo            | N/A        | N/A             | Encargado de dirigir cierto mantenimiento         |
+
+
+TAB1
+
+|CODIGO |  DESCRIPCIÓN |
+|-------|--------------|
+| I1    |  Baja        |
+| I2    |  Media    |
+| I3    |  Alta        |
+|I4     | Crítica      |
+
+
+
+
+## Entidad Registro Incidencia
+Representa el registro de incidencias y problemas que pueda haber en el centro comercial para luego realizar su mantenimiento correctivo.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| idIncidencia          | CHAR(10)       | x(10)               | No nulo, único            | N/A        | N/A             | Identificador único de la incidencia                     |
+| fecha_Registro         | DATE           | YYYY-MM-DD          | Fecha válida, no nulo     | N/A        | N/A             | Fecha que se realizó el registro                         |
+| hora_Registro         | TIME           | HH: MM :SS          | Valida en tiempo     | horas        | N/A             | Hora que se realizó el registro                       |
+| Descripción             | CHAR       | x(64)               | No nulo | N/A       | N/A             | Detalles que tiene la incidencia                          |
+| empleado         | CHAR      | x(64)              | No nulo            | N/A        | N/A             | Supervisor que registró la incidencia         |
+
+
+## Entidad Registro Mantenimiento
+Representa el registro de matenimiento realizados.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| idRMantenimiento          | CHAR(10)       | x(10)               | No nulo, único            | N/A        | N/A             | Identificador único del registro de mantenimiento                     |
+| fecha_Registro         | DATE           | YYYY-MM-DD          | Fecha válida, no nulo     | N/A        | N/A             | Fecha que se realizó el registro                         |
+| hora_Registro         | TIME           | HH: MM :SS          | Valida en tiempo     | horas        | N/A             | Hora que se realizó el registro                       |
+| Observaciones             | CHAR       | x(64)               | No nulo | N/A       | N/A             | Detalles que hubieron en el mantenimiento                          |
+| empleado         | CHAR      | x(64)              | No nulo            | N/A        | N/A             | Supervisor que registró la finalización del mantenimiento         |
+
+## Entidad Instalación
+Representa las zonas y tiendas donde se va a realizar el mantenimiento.
+
+| **Atributo**        | **Naturaleza** | **Formato**         | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|---------------------|----------------|---------------------|----------------------|------------|-----------------|------------------------------------------------------- |
+| cod_instalación          | CHAR(10)       | x(10)               | No nulo, único            | N/A        | N/A             | Identificador único de la instalación                     |
+| Tipo             | CHAR(10)  | x(30)        | zona, tienda, módulo            | N/A        | N/A             | Detalla el tipo de intalación |                        
+| referencia_ubicación             | CHAR       | x(64)               | No nulo | N/A       | N/A             | Detalles de la ubicación de la instalación                          |
+| Nombre        | CHAR      | x(64)              | No nulo            | N/A        | N/A             | Nombre específico de la instalación        |
+
+
