--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -173,4 +173,38 @@ Representa las zonas y tiendas donde se va a realizar el mantenimiento.
 | referencia_ubicación             | CHAR       | x(64)               | No nulo | N/A       | N/A             | Detalles de la ubicación de la instalación                          |
 | Nombre        | CHAR      | x(64)              | No nulo            | N/A        | N/A             | Nombre específico de la instalación        |
 
+## Entidad Espacio comercial
+Representa los modulos y tiendas que se encuentran en Mall Plaza.
 
+| **Atributo**        | **Naturaleza** | **Formato**          | **Valores Válidos**   | **Unidad**| **Derivada de** | **Descripción (Corta)**                             |
+|---------------------|----------------|----------------------|-----------------------|-----------|-----------------|-----------------------------------------------------|
+| idEspacioComercial         | CHAR (10)    | x(10)        | No nulo, único        | N/A                | N/A             | Código único asignado a cada espacio comercial.             |
+| Tipo de inmueble            | CHAR (10)      | x(10) | TAB2   | N/A                | N/A             | Clasificación del inmueble.          |
+| Área       |  DECIMAL(10,2)   | 9999999.99    | >0     | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                     |
+| Tamaño                     |  CHAR (10)     | x(10) | TAB3 | N/A     | N/A             | Clasificación del tamaño del espacio comercial                 |
+| Ubicación                  | CHAR            | X(64)                | No nulo   | N/A                | N/A             | Ubicación del espacio comercial dentro de Mall Plaza.                     |
+| Estado                     |  CHAR (10)       |x(10)| TAB4   | N/A                | N/A             | Estado actual del espacio comercial.                         |
+
+TAB2
+
+|CODIGO |  DESCRIPCIÓN |
+|-------|--------------|
+| E1    |  Tienda      |
+| E2    |  Modulo      |
+
+TAB3
+
+|CODIGO |  DESCRIPCIÓN  |
+|-------|---------------|
+| T1    |  Pequeño      |
+| T2    |  Mediano      |
+| T3    |  Grande       |
+| T4    |  Departamental|
+
+TAB3
+
+|CODIGO |  DESCRIPCIÓN |
+|-------|--------------|
+| S1    |  Ocupado      |
+| S2    |  Disponible      |
+| S3    |  En mantenimiento     |
