--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -208,3 +208,45 @@ TAB3
 | S1    |  Ocupado      |
 | S2    |  Disponible      |
 | S3    |  En mantenimiento     |
+
+
+Aquí tienes los diccionarios semánticos para las entidades **Factura**, **Recordatorio**, y **Pago**, siguiendo el formato que solicitaste:
+
+---
+
+## **Entidad Factura**  
+La entidad Factura representa los documentos emitidos por el sistema para cobrar los montos pendientes a los inquilinos. Cada factura detalla los términos del cobro, como el monto total, fecha de emisión y estado de la factura (si está pagada o pendiente).
+
+| **Atributo**         | **Naturaleza** | **Formato**         | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|----------------------|----------------|---------------------|-----------------------|------------|-----------------|--------------------------------------------------------|
+| idFactura            | CHAR(10)       | x(10)               | No nulo, único         | N/A        | N/A             | Identificador único de la factura.                     |
+| Fecha_Emisión        | DATE           | dd/mm/aaaa          | No nulo                | N/A        | N/A             | Fecha en la que se emitió la factura.                  |
+| Monto_Total          | DECIMAL(10,2)  | 9999999.99          | No nulo, > 0           | Moneda     | N/A             | Monto total a pagar por la factura.                    |
+| Estado               | CHAR(10)       | x(10)               | "Pendiente", "Pagado"  | N/A        | N/A             | Estado actual de la factura.                           |
+| Fecha_Vencimiento    | DATE           | dd/mm/aaaa          | No nulo                | N/A        | N/A             | Fecha límite para pagar la factura.                    |
+
+---
+
+## **Entidad Recordatorio**  
+La entidad Recordatorio almacena la información de los recordatorios de pago enviados a los inquilinos. Estos recordatorios pueden ser enviados antes o después de la fecha de vencimiento de una factura, para notificar sobre la necesidad de pago.
+
+| **Atributo**         | **Naturaleza** | **Formato**         | **Valores Válidos**      | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|----------------------|----------------|---------------------|--------------------------|------------|-----------------|--------------------------------------------------------|
+| idRecordatorio       | CHAR(10)       | x(10)               | No nulo, único            | N/A        | N/A             | Identificador único del recordatorio.                  |
+| Fecha_Envio          | DATE           | dd/mm/aaaa          | No nulo                   | N/A        | N/A             | Fecha en la que se envió el recordatorio.              |
+| Tipo_Recordatorio    | CHAR(10)       | x(10)               | "Previo", "Posterior"     | N/A        | N/A             | Indica si el recordatorio fue enviado antes o después del vencimiento de la factura. |
+
+---
+
+## **Entidad Pago**  
+La entidad Pago almacena la información de los pagos realizados por los inquilinos. Un pago puede ser registrado manualmente por el administrador o automáticamente a través de una pasarela de pagos. Puede haber múltiples pagos asociados a una factura si se permiten pagos parciales.
+
+| **Atributo**         | **Naturaleza** | **Formato**         | **Valores Válidos**       | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|----------------------|----------------|---------------------|---------------------------|------------|-----------------|--------------------------------------------------------|
+| idPago               | CHAR(10)       | x(10)               | No nulo, único             | N/A        | N/A             | Identificador único del pago.                          |
+| Fecha_Pago           | DATE           | dd/mm/aaaa          | No nulo                    | N/A        | N/A             | Fecha en la que se realizó el pago.                    |
+| Monto_Pago           | DECIMAL(10,2)  | 9999999.99          | No nulo, > 0               | Moneda     | N/A             | Monto pagado en esta transacción.                      |
+| Método_Pago          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado para realizar el pago.                |
+
+---
+
